
CREATE TABLE IF NOT EXISTS `heichal-hakodesh`.`comments` ( `id` INT NOT NULL AUTO_INCREMENT , `article_id` INT NOT NULL , `date` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP , `user_id` INT NOT NULL , PRIMARY KEY (`id`)) ENGINE = InnoDB;

CREATE TABLE IF NOT EXISTS `heichal-hakodesh`.`images` ( `id` INT NOT NULL AUTO_INCREMENT , `name` VARCHAR(256) NOT NULL , `article_id` INT NOT NULL , `video` BOOLEAN NOT NULL DEFAULT FALSE , PRIMARY KEY (`id`)) ENGINE = InnoDB;

CREATE TABLE IF NOT EXISTS `heichal-hakodesh`.`newsletter` ( `id` INT NOT NULL AUTO_INCREMENT , `user_id` INT NOT NULL , `date` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP , PRIMARY KEY (`id`)) ENGINE = InnoDB;

CREATE TABLE IF NOT EXISTS `heichal-hakodesh`.`users` ( `id` INT NOT NULL AUTO_INCREMENT , `name` VARCHAR(256) NOT NULL , `email` VARCHAR(256) NOT NULL , `password` VARCHAR(256) NOT NULL , `date` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP , `last_login` TIMESTAMP NULL DEFAULT NULL, `logged` BOOLEAN NOT NULL DEFAULT FALSE , `blocked` TIMESTAMP NULL DEFAULT NULL , PRIMARY KEY (`id`)) ENGINE = InnoDB;

INSERT INTO `categories` (`name`, `parent`) VALUES 
('שיעורים', '-1'),
('וידאו', '1'),
('שמע', '1'),
('חדשות', '-1'),
('הודעות', '-1');
-- ================================================================

-- ================================================================
-- 03.05.2017
ALTER TABLE `articles` ADD `date` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP AFTER `cat_id`;
-- ================================================================

-- ================================================================
-- 04.05.2017
ALTER TABLE `images` ADD `date` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP AFTER `video`;
ALTER TABLE `images` ADD `is_main` BOOLEAN NOT NULL DEFAULT FALSE AFTER `date`;
-- ================================================================