@@ -31,4 +31,10 @@ ALTER TABLE `articles` ADD `date` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP A
 -- 04.05.2017
 ALTER TABLE `images` ADD `date` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP AFTER `video`;
 ALTER TABLE `images` ADD `is_main` BOOLEAN NOT NULL DEFAULT FALSE AFTER `date`;
+ALTER TABLE `articles` CHANGE `date` `date` DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP;
+ALTER TABLE `comments` CHANGE `date` `date` DATETIME NOT NULL 
+DEFAULT CURRENT_TIMESTAMP;
+ALTER TABLE `images` CHANGE `date` `date` DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP;
+ALTER TABLE `newsletter` CHANGE `date` `date` DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP;
+ALTER TABLE `users` CHANGE `date` `date` DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP, CHANGE `last_login` `last_login` DATETIME NULL DEFAULT NULL, CHANGE `blocked` `blocked` DATETIME NULL DEFAULT NULL;
 -- ================================================================
